--- a/TnbDynamicMesh/TnbDynamicMesh.vcxproj
+++ b/TnbDynamicMesh/TnbDynamicMesh.vcxproj
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
+    <ProjectConfiguration Include="DebugNoCopyHxx|x64">
+      <Configuration>DebugNoCopyHxx</Configuration>
+      <Platform>x64</Platform>
+    </ProjectConfiguration>
     <ProjectConfiguration Include="Debug|x64">
       <Configuration>Debug</Configuration>
       <Platform>x64</Platform>
@@ -23,6 +27,12 @@
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugNoCopyHxx|x64'" Label="Configuration">
+    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <UseDebugLibraries>true</UseDebugLibraries>
+    <PlatformToolset>v141</PlatformToolset>
+    <CharacterSet>MultiByte</CharacterSet>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
@@ -38,10 +48,16 @@
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
+  <ImportGroup Condition="'$(Configuration)|$(Platform)'=='DebugNoCopyHxx|Win32'" Label="PropertySheets">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
+  <ImportGroup Condition="'$(Configuration)|$(Platform)'=='DebugNoCopyHxx|x64'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -49,6 +65,9 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <TargetName>$(ProjectName)d</TargetName>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugNoCopyHxx|x64'">
     <TargetName>$(ProjectName)d</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -69,10 +88,41 @@
       <Command>if not exist "$(SolutionDir)include" mkdir "$(SolutionDir)include"
 if not exist "$(ProjectDir)include" mkdir "$(ProjectDir)include"
 for /r "$(ProjectDir)tnbLib" %%f in (*.hxx) do @xcopy "%%f" "$(SolutionDir)include" /y
-for /r "$(ProjectDir)tnbLib" %%f in (*.hxx) do @xcopy "%%f" "$(ProjectDir)include" /y</Command>
+for /r "$(ProjectDir)tnbLib" %%f in (*.hxx) do @xcopy "%%f" "$(ProjectDir)include" /y
+for /r "$(ProjectDir)tnbLib" %%f in (*.lxx) do @xcopy "%%f" "$(SolutionDir)include" /y</Command>
+    </PostBuildEvent>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='DebugNoCopyHxx|x64'">
+    <ClCompile>
+      <WarningLevel>Level3</WarningLevel>
+      <Optimization>Disabled</Optimization>
+      <SDLCheck>true</SDLCheck>
+      <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(ProjectDir)TnbLib\mesh\snappyHexMesh\externalDisplacementMeshMover\zeroFixedValue;$(ProjectDir)TnbLib\mesh\snappyHexMesh\externalDisplacementMeshMover;$(ProjectDir)TnbLib\mesh\snappyHexMesh\meshRefinement;$(ProjectDir)TnbLib\mesh\snappyHexMesh\refinementFeatures;$(ProjectDir)TnbLib\mesh\snappyHexMesh\refinementSurfaces;$(ProjectDir)TnbLib\mesh\snappyHexMesh\shellSurfaces;$(ProjectDir)TnbLib\mesh\snappyHexMesh\snappyHexMeshDriver\layerParameters;$(ProjectDir)TnbLib\mesh\snappyHexMesh\snappyHexMeshDriver\pointData;$(ProjectDir)TnbLib\mesh\snappyHexMesh\snappyHexMeshDriver\refinementParameters;$(ProjectDir)TnbLib\mesh\snappyHexMesh\snappyHexMeshDriver\snapParameters;$(ProjectDir)TnbLib\mesh\snappyHexMesh\snappyHexMeshDriver;$(ProjectDir)TnbLib\mesh\snappyHexMesh\trackedParticle;$(ProjectDir)TnbLib\conversion\ensight\file;$(ProjectDir)TnbLib\conversion\ensight\part;$(ProjectDir)TnbLib\conversion\meshReader\starcd;$(ProjectDir)TnbLib\conversion\meshReader;$(ProjectDir)TnbLib\conversion\meshTables;$(ProjectDir)TnbLib\conversion\meshWriter\starcd;$(ProjectDir)TnbLib\conversion\meshWriter;$(ProjectDir)TnbLib\conversion\polyDualMesh;$(ProjectDir)TnbLib\dynamicFvMesh\dynamicFvMesh;$(ProjectDir)TnbLib\dynamicFvMesh\dynamicInkJetFvMesh;$(ProjectDir)TnbLib\dynamicFvMesh\dynamicInterpolatedFvMesh;$(ProjectDir)TnbLib\dynamicFvMesh\dynamicMotionSolverFvMesh;$(ProjectDir)TnbLib\dynamicFvMesh\dynamicRefineFvMesh;$(ProjectDir)TnbLib\dynamicFvMesh\staticFvMesh;$(ProjectDir)TnbLib\dynamicMesh\attachDetach;$(ProjectDir)TnbLib\dynamicMesh\boundaryMesh;$(ProjectDir)TnbLib\dynamicMesh\boundaryPatch;$(ProjectDir)TnbLib\dynamicMesh\createShellMesh;$(ProjectDir)TnbLib\dynamicMesh\extrudePatchMesh;$(ProjectDir)TnbLib\dynamicMesh\fvMeshAdder;$(ProjectDir)TnbLib\dynamicMesh\fvMeshDistribute;$(ProjectDir)TnbLib\dynamicMesh\fvMeshSubset;$(ProjectDir)TnbLib\dynamicMesh\fvMeshTools;$(ProjectDir)TnbLib\dynamicMesh\layerAdditionRemoval;$(ProjectDir)TnbLib\dynamicMesh\meshCut\cellCuts;$(ProjectDir)TnbLib\dynamicMesh\meshCut\cellLooper;$(ProjectDir)TnbLib\dynamicMesh\meshCut\directions\directionInfo;$(ProjectDir)TnbLib\dynamicMesh\meshCut\directions;$(ProjectDir)TnbLib\dynamicMesh\meshCut\edgeVertex;$(ProjectDir)TnbLib\dynamicMesh\meshCut\meshModifiers\boundaryCutter;$(ProjectDir)TnbLib\dynamicMesh\meshCut\meshModifiers\meshCutAndRemove;$(ProjectDir)TnbLib\dynamicMesh\meshCut\meshModifiers\meshCutter;$(ProjectDir)TnbLib\dynamicMesh\meshCut\meshModifiers\multiDirRefinement;$(ProjectDir)TnbLib\dynamicMesh\meshCut\meshModifiers\refinementIterator;$(ProjectDir)TnbLib\dynamicMesh\meshCut\meshModifiers\undoableMeshCutter;$(ProjectDir)TnbLib\dynamicMesh\meshCut\refineCell;$(ProjectDir)TnbLib\dynamicMesh\meshCut\splitCell;$(ProjectDir)TnbLib\dynamicMesh\meshCut\wallLayerCells\wallNormalInfo;$(ProjectDir)TnbLib\dynamicMesh\meshCut\wallLayerCells;$(ProjectDir)TnbLib\dynamicMesh\motionSmoother\badQualityToCell;$(ProjectDir)TnbLib\dynamicMesh\motionSmoother\badQualityToFace;$(ProjectDir)TnbLib\dynamicMesh\motionSmoother\polyMeshGeometry;$(ProjectDir)TnbLib\dynamicMesh\motionSmoother;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\componentDisplacement;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\componentVelocity;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\displacement\displacement;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\displacement\interpolation;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\displacement\layeredSolver;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\displacement\linearSolver;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\displacement\points0;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\displacement\solidBody\interpolatingSolidBodyMotionSolver;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\displacement\solidBody\multiSolidBodyMotionSolver;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\displacement\solidBody\pointPatchFields\derived\solidBodyMotionDisplacement;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\displacement\solidBody\solidBodyMotionFunctions\axisRotationMotion;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\displacement\solidBody\solidBodyMotionFunctions\linearMotion;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\displacement\solidBody\solidBodyMotionFunctions\multiMotion;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\displacement\solidBody\solidBodyMotionFunctions\oscillatingLinearMotion;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\displacement\solidBody\solidBodyMotionFunctions\oscillatingRotatingMotion;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\displacement\solidBody\solidBodyMotionFunctions\rotatingMotion;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\displacement\solidBody\solidBodyMotionFunctions\SDA;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\displacement\solidBody\solidBodyMotionFunctions\solidBodyMotionFunction;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\displacement\solidBody\solidBodyMotionFunctions\tabulated6DoFMotion;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\displacement\solidBody\solidBodyMotionSolver;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\motionSolver;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\motionSolverList;$(ProjectDir)TnbLib\dynamicMesh\motionSolvers\velocity;$(ProjectDir)TnbLib\dynamicMesh\perfectInterface;$(ProjectDir)TnbLib\dynamicMesh\pointInterpolator;$(ProjectDir)TnbLib\dynamicMesh\pointPatchDist;$(ProjectDir)TnbLib\dynamicMesh\polyMeshAdder;$(ProjectDir)TnbLib\dynamicMesh\polyMeshFilter;$(ProjectDir)TnbLib\dynamicMesh\polyTopoChange\attachPolyTopoChanger;$(ProjectDir)TnbLib\dynamicMesh\polyTopoChange\polyMeshModifier;$(ProjectDir)TnbLib\dynamicMesh\polyTopoChange\polyTopoChange\addObject;$(ProjectDir)TnbLib\dynamicMesh\polyTopoChange\polyTopoChange\hexRef8;$(ProjectDir)TnbLib\dynamicMesh\polyTopoChange\polyTopoChange\modifyObject;$(ProjectDir)TnbLib\dynamicMesh\polyTopoChange\polyTopoChange\pointEdgeCollapse;$(ProjectDir)TnbLib\dynamicMesh\polyTopoChange\polyTopoChange\removeObject;$(ProjectDir)TnbLib\dynamicMesh\polyTopoChange\polyTopoChange\topoAction;$(ProjectDir)TnbLib\dynamicMesh\polyTopoChange\polyTopoChange;$(ProjectDir)TnbLib\dynamicMesh\polyTopoChange\polyTopoChanger;$(ProjectDir)TnbLib\dynamicMesh\polyTopoChange\repatchPolyTopoChanger;$(ProjectDir)TnbLib\dynamicMesh\setUpdater;$(ProjectDir)TnbLib\dynamicMesh\slidingInterface\enrichedPatch;$(ProjectDir)TnbLib\dynamicMesh\slidingInterface;$(SolutionDir)TnbFvMesh\include;$(SolutionDir)TnbFiniteVolume\include;$(SolutionDir)TnbBase\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <LanguageStandard>stdcpp17</LanguageStandard>
+      <PreprocessorDefinitions>NoRepository;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
+    <Link>
+      <SubSystem>Console</SubSystem>
+    </Link>
+    <PostBuildEvent>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <ClCompile>
+      <WarningLevel>Level3</WarningLevel>
+      <Optimization>Disabled</Optimization>
+      <SDLCheck>true</SDLCheck>
+      <ConformanceMode>true</ConformanceMode>
+    </ClCompile>
+    <Link>
+      <SubSystem>Console</SubSystem>
+    </Link>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='DebugNoCopyHxx|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
@@ -321,6 +371,11 @@ for /r "$(ProjectDir)tnbLib" %%f in (*.hxx) do @xcopy "%%f" "$(ProjectDir)includ
     <ClCompile Include="TnbLib\dynamicMesh\slidingInterface\slidingInterfaceAttachedAddressing.cxx" />
     <ClCompile Include="TnbLib\dynamicMesh\slidingInterface\slidingInterfaceClearCouple.cxx" />
     <ClCompile Include="TnbLib\dynamicMesh\slidingInterface\slidingInterfaceProjectPoints.cxx" />
+    <None Include="TnbLib\dynamicFvMesh\include\createDyMControls.lxx" />
+    <None Include="TnbLib\dynamicFvMesh\include\createDynamicFvMesh.lxx" />
+    <None Include="TnbLib\dynamicFvMesh\include\createNamedDynamicFvMesh.lxx" />
+    <None Include="TnbLib\dynamicFvMesh\include\meshCourantNo.lxx" />
+    <None Include="TnbLib\dynamicFvMesh\include\readDyMControls.lxx" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
